--- a/PARK/index.html
+++ b/PARK/index.html
@@ -25,19 +25,25 @@
       </div>
       <section class="Pservice__category">
         <ul class="Pservice__category-buttonwrapper">
-          <button class="Pservice__cartegory-button">All Product</button>
-          <button class="Pservice__cartegory-button">커뮤니케이션</button>
-          <button class="Pservice__cartegory-button">엔터테인먼트</button>
-          <button class="Pservice__cartegory-button">라이프 스타일</button>
-          <button class="Pservice__cartegory-button">쇼핑</button>
-          <button class="Pservice__cartegory-button">핀테크</button>
-          <button class="Pservice__cartegory-button">비즈니스</button>
-          <button class="Pservice__cartegory-button">뉴스</button>
-          <button class="Pservice__cartegory-button">게임</button>
+          <button class="Pservice__cartegory-button Pall">All Product</button>
+          <button id="comu" class="Pservice__cartegory-button">
+            커뮤니케이션
+          </button>
+          <button id="enter" class="Pservice__cartegory-button">
+            엔터테인먼트
+          </button>
+          <button id="life" class="Pservice__cartegory-button">
+            라이프 스타일
+          </button>
+          <button id="shop" class="Pservice__cartegory-button">쇼핑</button>
+          <button id="tech" class="Pservice__cartegory-button">핀테크</button>
+          <button id="busi" class="Pservice__cartegory-button">비즈니스</button>
+          <button id="news" class="Pservice__cartegory-button">뉴스</button>
+          <button id="game" class="Pservice__cartegory-button">게임</button>
         </ul>
 
         <div class="Pservice__card-wrapper">
-          <article class="Pservice__card">
+          <article class="Pservice__card comu">
             <img src="img/service_img.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE</h2>
@@ -66,7 +72,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+          <article class="Pservice__card comu">
             <img src="img/service_img2.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">오픈챗</h2>
@@ -86,7 +92,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+          <article class="Pservice__card enter">
             <img src="img/service_img3.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 망가</h2>
@@ -114,7 +120,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+          <article class="Pservice__card enter">
             <img src="img/service_img4.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뮤직</h2>
@@ -143,7 +149,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card enter">
             <img src="img/service_img5.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 운세</h2>
@@ -171,7 +177,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card enter">
             <img src="img/service_img6.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레코즈</h2>
@@ -192,7 +199,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card enter">
             <img src="img/service_img7.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Charmmy</h2>
@@ -212,7 +219,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card life">
             <img src="img/service_img8.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 클럽</h2>
@@ -232,7 +240,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card life">
             <img src="img/service_img9.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 아르바이트</h2>
@@ -253,7 +262,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card shop">
             <img src="img/service_img10.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인프렌즈 스토어</h2>
@@ -273,7 +282,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card shop">
             <img src="img/service_img11.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 플라이어</h2>
@@ -293,7 +303,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card shop">
             <img src="img/service_img12.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 기프트</h2>
@@ -314,7 +325,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card tech">
             <img src="img/service_img13.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 증권</h2>
@@ -334,7 +345,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card tech">
             <img src="img/service_img14.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포켓 머니</h2>
@@ -354,7 +366,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card tech">
             <img src="img/service_img15.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 FX</h2>
@@ -374,7 +387,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card tech">
             <img src="img/service_img16.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE BITMAX</h2>
@@ -393,7 +407,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card busi">
             <img src="img/service_img17.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고</h2>
@@ -413,7 +427,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card busi">
             <img src="img/service_img18.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고 네트워크</h2>
@@ -434,7 +449,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card busi">
             <img src="img/service_img19.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Talk Head View</h2>
@@ -455,7 +470,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card busi">
             <img src="img/service_img20.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 세일즈 프로모션</h2>
@@ -475,7 +491,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card busi">
             <img src="img/service_img21.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 공식 계정</h2>
@@ -498,7 +515,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card busi">
             <img src="img/service_img22.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 AD</h2>
@@ -518,7 +535,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+          <article class="Pservice__card busi">
             <img src="img/service_img23.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 프로모션 스티커</h2>
@@ -543,7 +560,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card busi">
             <img src="img/service_img24.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 미니 앱</h2>
@@ -561,7 +579,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card busi">
             <img src="img/service_img25.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 리서치</h2>
@@ -581,7 +600,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card news">
             <img src="img/service_img26.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뉴스</h2>
@@ -602,7 +622,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img27.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 셰프</h2>
@@ -625,7 +646,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img28.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블 2</h2>
@@ -651,7 +673,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card game">
             <img src="img/service_img29.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포코포코</h2>
@@ -676,7 +698,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img30.jpeg" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레인저스</h2>
@@ -703,7 +726,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card game">
             <img src="img/service_img31.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 디즈니 썸썸</h2>
@@ -728,7 +751,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img32.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE 포코팡 타운</h2>
@@ -756,7 +780,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img33.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인팝2</h2>
@@ -785,7 +810,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card">
+          <article class="Pservice__card game">
             <img src="img/service_img34.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 퍼즐탄탄</h2>
@@ -808,7 +833,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img35.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블</h2>
@@ -833,7 +859,8 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card">
+
+          <article class="Pservice__card game">
             <img src="img/service_img36.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 브라운팜</h2>
