--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   </head>
   <body>
     <!--로딩 화면(SON)-->
-    <header class="Sko">
+    <header  class="Sko">
       <div class="Sko-box">
         <!-- 라인 로고 -->
         <h1 class="Sko-bbox">
           <a href="">
             <div
-              class="onlyPc image-wrapper"
+              class="image-wrapper"
               style="
                 position: relative;
                 overflow: hidden;
@@ -56,25 +56,11 @@
                 alt=""
               />
             </div>
-            <!-- <div
-              class="onlySp image-warpper"
-              style="
-                position: relative;
-                overflow: hidden;
-                display: inline-block;
-                width: 38px;
-                height: 14px;
-              "
-            >
-              <img src="img/라인 로고.png" alt="" />
-            </div> -->
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
         <ul class="SheaderMenu onlyPc">
-          <li id="SclickFirstBtn">
-            <a href="">Life on LINE</a>
-          </li>
+          <li id="SclickFirstBtn"><a href="">Life on LINE</a></li>
           <li id="SclickSecondBtn"><a href="">커뮤니케이션 앱</a></li>
           <li id="SclickThirdBtn"><a href="">서비스</a></li>
           <li
@@ -140,7 +126,7 @@
       </div>
     </header>
     <main>
-      <div class="SmvArea">
+      <div  id="SmvTarget1" class="SmvArea">
         <div class="SmvText">
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
@@ -229,7 +215,7 @@
     </section>
     <section id="Lcommunication">
       <div class="Lmain_sub">
-        <h2 class="Lmain_title">커뮤니케이션 앱</h2>
+        <h2 id="SmvTarget2" class="Lmain_title">커뮤니케이션 앱</h2>
         <p class="Lsub_text">
           언제 어디서나 무료로 메세지를 보내고, 깨끗한 음질로 24시간 자유롭게
           무료 통화가<br />가능한 새로운 커뮤니케이션 앱입니다.
@@ -294,7 +280,7 @@
     <!--섹션 3(PARK)-->
     <main class="service">
       <div class="service__header">
-        <h1 class="service__header-title">서비스</h1>
+        <h1 id="SmvTarget3" class="service__header-title">서비스</h1>
         <span class="service__header-sub"
           >일부 서비스는 특정 국가에서만 사용 가능합니다.</span
         >
