--- a/index.html
+++ b/index.html
@@ -31,30 +31,8 @@
         <!-- 라인 로고 -->
         <h1 class="Sko-bbox">
           <a href="">
-            <div
-              class="image-wrapper"
-              style="
-                position: relative;
-                overflow: hidden;
-                display: inline-block;
-                width: 43px;
-                height: 16px;
-              "
-            >
-              <img
-                style="
-                  position: absolute;
-                  top: 0px;
-                  left: 0px;
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  object-position: center center;
-                  opacity: 1;
-                "
-                src="SON/img/icon-title-pc_1.png"
-                alt=""
-              />
+            <div class="image-wrapper">
+              <img class="logoImg" src="SON/img/icon-title-pc_1.png"alt=""/>
             </div>
           </a>
         </h1>
@@ -63,40 +41,13 @@
           <li id="SclickFirstBtn"><a href="">Life on LINE</a></li>
           <li id="SclickSecondBtn"><a href="">커뮤니케이션 앱</a></li>
           <li id="SclickThirdBtn"><a href="">서비스</a></li>
-          <li
-            class="ScurrentLine"
-            style="left: 0px; width: 93px; transition: 0.2s ease-in-out"
-          ></li>
+          <li class="ScurrentLine"></li>
         </ul>
         <!-- 2 현재 언어+ 로고-->
         <ul class="SlangMenuTop fonL">
           <li class="iconLang onlyPc">
-            <div
-              class="Simage-warpper"
-              style="
-                position: relative;
-                overflow: hidden;
-                display: inline-block;
-                width: 20px;
-                height: 20px;
-              "
-            >
-              <img
-                aria-hidden="true"
-                src="SON/img/langIcon.png"
-                alt
-                style="
-                  position: absolute;
-                  top: 0px;
-                  left: 0px;
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  object-position: center center;
-                  opacity: 1;
-                  transition-delay: 500ms;
-                "
-              />
+            <div class="Simage-warpper" >
+              <img src="SON/img/langIcon.png" alt=""/>
             </div>
           </li>
           <li class="SiconLang onlySp"></li>
@@ -142,7 +93,10 @@
             </div>
           </div>
         </div>
-        <img src="SON/img/hero1.jpg" alt="" />
+        <div class="SmvImages">
+          <img src="SON/img/hero1.jpg" class="active" alt="" />
+          <!-- <img src="SON/img/hero2.jpg" alt=""> -->
+        </div>
       </div>
     </main>
     <!--섹션 2(LEE)-->
