--- a/PARK/index.html
+++ b/PARK/index.html
@@ -25,7 +25,9 @@
       </div>
       <section class="Pservice__category">
         <ul class="Pservice__category-buttonwrapper">
-          <button class="Pservice__cartegory-button Pall">All Product</button>
+          <button id="Pall" class="Pservice__cartegory-button">
+            All Product
+          </button>
           <button id="comu" class="Pservice__cartegory-button">
             커뮤니케이션
           </button>
@@ -43,7 +45,7 @@
         </ul>
 
         <div class="Pservice__card-wrapper">
-          <article class="Pservice__card comu">
+          <article class="Pservice__card comu Pall">
             <img src="img/service_img.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE</h2>
@@ -72,7 +74,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card comu">
+          <article class="Pservice__card comu Pall">
             <img src="img/service_img2.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">오픈챗</h2>
@@ -92,7 +94,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img3.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 망가</h2>
@@ -120,7 +122,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img4.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뮤직</h2>
@@ -149,7 +151,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img5.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 운세</h2>
@@ -178,7 +180,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img6.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레코즈</h2>
@@ -199,7 +201,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card enter">
+          <article class="Pservice__card enter Pall">
             <img src="img/service_img7.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Charmmy</h2>
@@ -220,7 +222,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card life">
+          <article class="Pservice__card life Pall">
             <img src="img/service_img8.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 클럽</h2>
@@ -241,7 +243,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card life">
+          <article class="Pservice__card life Pall">
             <img src="img/service_img9.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 아르바이트</h2>
@@ -262,7 +264,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img10.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인프렌즈 스토어</h2>
@@ -283,7 +285,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img11.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 플라이어</h2>
@@ -304,7 +306,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card shop">
+          <article class="Pservice__card shop Pall">
             <img src="img/service_img12.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 기프트</h2>
@@ -325,7 +327,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img13.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 증권</h2>
@@ -346,7 +348,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img14.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포켓 머니</h2>
@@ -367,7 +369,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img15.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 FX</h2>
@@ -388,7 +390,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card tech">
+          <article class="Pservice__card tech Pall">
             <img src="img/service_img16.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE BITMAX</h2>
@@ -407,7 +409,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img17.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고</h2>
@@ -428,7 +430,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img18.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 광고 네트워크</h2>
@@ -449,7 +451,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img19.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">Talk Head View</h2>
@@ -471,7 +473,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img20.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 세일즈 프로모션</h2>
@@ -492,7 +494,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img21.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 공식 계정</h2>
@@ -515,7 +517,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img22.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포인트 AD</h2>
@@ -535,7 +537,7 @@
               </div>
             </div>
           </article>
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img23.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 프로모션 스티커</h2>
@@ -561,7 +563,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img24.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 미니 앱</h2>
@@ -580,7 +582,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card busi">
+          <article class="Pservice__card busi Pall">
             <img src="img/service_img25.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 리서치</h2>
@@ -601,7 +603,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card news">
+          <article class="Pservice__card news Pall">
             <img src="img/service_img26.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 뉴스</h2>
@@ -623,7 +625,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img27.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 셰프</h2>
@@ -647,7 +649,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img28.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블 2</h2>
@@ -673,7 +675,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img29.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 포코포코</h2>
@@ -699,7 +701,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img30.jpeg" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 레인저스</h2>
@@ -726,7 +728,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img31.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 디즈니 썸썸</h2>
@@ -752,7 +754,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img32.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">LINE 포코팡 타운</h2>
@@ -781,7 +783,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img33.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인팝2</h2>
@@ -810,7 +812,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img34.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 퍼즐탄탄</h2>
@@ -834,7 +836,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img35.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 버블</h2>
@@ -860,7 +862,7 @@
             </div>
           </article>
 
-          <article class="Pservice__card game">
+          <article class="Pservice__card game Pall">
             <img src="img/service_img36.png" alt="" />
             <div class="Pcard__textarea">
               <h2 class="Pcard__textarea-title">라인 브라운팜</h2>
